# lyra

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PLAN.md  README.md  commitlint.config.mjs
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/lyra/: __init__.py
backend/lyra/api/: __init__.py  app.py  deps.py  readiness.py
backend/lyra/api/routes/: __init__.py  admin.py  auth.py  chat.py  documents.py  feedback.py  search.py  sources.py
backend/lyra/api/schemas/: __init__.py  admin.py  auth.py  chat.py  feedback.py  ingest.py  search.py
backend/lyra/core/: __init__.py  auth.py  concurrency.py  config.py  constants.py  errors.py  logging.py  metrics.py  ratelimit.py
backend/lyra/core/clients/: __init__.py  embeddings.py  llm.py  openai_compat.py  reranker.py
backend/lyra/db/: __init__.py  base.py  session.py
backend/lyra/db/models/: __init__.py  (+5 more)
backend/lyra/evals/: __init__.py  __main__.py  dataset.py  gate.py  judge.py  metrics.py  report.py  runner.py  seed.py
backend/lyra/ingest/: __init__.py  chunker.py  ir.py  secrets_scan.py  service.py  tokenizer.py
backend/lyra/rag/: __init__.py  confidence.py  deps.py  events.py  graph.py  service.py  state.py
backend/lyra/retrieval/: __init__.py  cache.py  channels.py  fusion.py  interfaces.py  postprocess.py  retriever.py
backend/lyra/workers/: __init__.py  celery_app.py
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_seed_defaults.py  dd7e7538c690_initial_schema.py
backend/tests/: conftest.py  rag_fakes.py  test_auth.py  test_chat_api.py  test_chunker.py  test_config.py  test_confluence_connector.py  test_evals_metrics.py  test_evals_pipeline.py  test_fusion_postprocess.py  test_health.py  test_ingest_service.py  test_logging_masking.py  test_migrations.py  test_parsers.py  test_rag_graph.py  test_rag_nodes.py  test_rbac.py  test_repositories.py  test_retrieval_integration.py  test_secrets_scan.py  test_upload_api.py
(+188 files in other folders)
