[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyra"
version = "0.1.0"
description = "LYRA — RAG-платформа корпоративных знаний"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery>=5.4",
    "httpx>=0.27",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "pgvector>=0.3",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "uuid6>=2024.1",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "tokenizers>=0.20",
    "huggingface-hub>=0.24",
    "croniter>=3.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "types-PyYAML>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["lyra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
# RUF001-003 ("ambiguous unicode") ложно срабатывают на кириллицу:
# докстринги и комментарии в проекте — русские (.claude/CLAUDE.md)
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = "migrations"

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "asyncpg.*", "fitz.*", "pymupdf.*", "docx.*", "croniter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: требует поднятый postgres (compose или CI-сервис)",
    "slow: медленные тесты с реальными моделями, вне CI-гейта",
]
